[package]
name = "graphql-tools"
version = "0.7.0"
edition = "2021"
authors = ["Martin Disch <martindisch@gmail.com>"]
description = "CLI tools for working with GraphQL"
repository = "https://github.com/martindisch/graphql-tools"
license = "MIT OR Apache-2.0"

[[bin]]
name = "graphql"
path = "src/main.rs"

[dependencies]
arboard = "3.2.1"
base64 = "0.21.5"
clap = { version = "4.4.7", features = ["derive"] }
eyre = "0.6.8"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.6.0-prerelease.2"
# CI backends to support
ci = ["github"]
# The installers to generate for each app
installers = ["shell", "powershell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "x86_64-unknown-linux-musl",
    "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "skip"
